# RSVP

./: .gitignore  IMPROVEMENT_REPORT.md  README.md  pyproject.toml  requirements.txt  rsvp.spec  setup.py
.github/workflows/: build.yml  release.yml
docs/superpowers/plans/: 2026-04-20-rsvp-improvements.md
docs/superpowers/specs/: 2026-04-20-rsvp-improvements-design.md
rsvp/: __init__.py  main.py
rsvp/core/: __init__.py  rsvp_engine.py  settings.py  text_processor.py
rsvp/ui/: __init__.py  controls.py  main_window.py  settings_dialog.py  text_input_dialog.py  word_display.py
tests/: __init__.py  conftest.py  test_rsvp_engine.py  test_settings.py  test_text_processor.py
tests/fixtures/: test.epub
