[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsvp-reader"
version = "1.0.0"
description = "Rapid Serial Visual Presentation (RSVP) speed reading application"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "PyQt6>=6.4.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "pyinstaller>=5.0.0",
]

[project.scripts]
rsvp = "rsvp.main:main"

[project.gui-scripts]
rsvp-gui = "rsvp.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rsvp*"]
